--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -13,13 +14,49 @@
         android:theme="@style/Theme.EcommerceApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.ProductListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.ProductDetailActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.CartActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.PaymentActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.LoginActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.OrderListActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.OrderDetailActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.AccountActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activities.VendorDetailActivity"
+            android:exported="true">
         </activity>
     </application>
 
